[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/World/Tall Grass/grass_tall6.png" type="Texture" id=1]
[ext_resource path="res://Assets/World/Tall Grass/grass_tall6.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Assets/World/Tall Grass/grass_tall_flat.png" type="Texture" id=3]
[ext_resource path="res://Assets/World/Tall Grass/grass_tall_flat.obj" type="ArrayMesh" id=4]
[ext_resource path="res://Assets/World/Tall Grass/grass_tall4.obj" type="ArrayMesh" id=5]
[ext_resource path="res://Assets/World/Tall Grass/grass_tall5.obj" type="ArrayMesh" id=6]
[ext_resource path="res://Assets/World/Tall Grass/grass_tall1.obj" type="ArrayMesh" id=7]
[ext_resource path="res://Assets/World/Tall Grass/grass_tall2.obj" type="ArrayMesh" id=8]
[ext_resource path="res://Assets/World/Tall Grass/grass_tall3.obj" type="ArrayMesh" id=9]
[ext_resource path="res://Assets/World/Tall Grass/TallGrass.gd" type="Script" id=10]


[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 1 )

[sub_resource type="BoxShape" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 3 )

[node name="Grass" type="Area"]
transform = Transform( 0.1, 0, 0, 0, 0.2, 0, 0, 0, 0.1, 0, 0, 0 )
collision_layer = 4
collision_mask = 5
script = ExtResource( 10 )

[node name="grass_tall1" type="MeshInstance" parent="."]
mesh = ExtResource( 7 )
material/0 = null

[node name="grass_tall2" type="MeshInstance" parent="."]
visible = false
mesh = ExtResource( 8 )
material/0 = null

[node name="grass_tall3" type="MeshInstance" parent="."]
visible = false
mesh = ExtResource( 9 )
material/0 = null

[node name="grass_tall4" type="MeshInstance" parent="."]
visible = false
mesh = ExtResource( 5 )
material/0 = null

[node name="grass_tall5" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0656424, 0, -0.00384331 )
visible = false
mesh = ExtResource( 6 )
material/0 = null

[node name="grass_tall6" type="MeshInstance" parent="."]
visible = false
mesh = ExtResource( 2 )
material/0 = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.757985, 0, 0, 0, 2.80195, 0, 0, 0, 0.757985, -0.481458, 2.61209, 0 )
shape = SubResource( 2 )

[node name="Anim" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="flat" type="Spatial" parent="."]
visible = false

[node name="grass_tall_flat" type="MeshInstance" parent="flat"]
transform = Transform( 2.25, 0, 0, 0, 0.5, 0, 0, 0, 1, -3.64344, 0, 0 )
mesh = ExtResource( 4 )
material/0 = SubResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Grass_body_entered"]
[connection signal="timeout" from="Anim" to="." method="_on_Anim_timeout"]
